trunk/test/fail/entityvoidtype.app
// Attribute type Void is not allowed in attribute authoredPapers

application test

section datamodel

  entity User {
    authoredPapers :: Void
  }